# image_upload_site

./: .dockerignore  .gitignore  README.md
app/backend/: pyproject.toml
app/backend/image_uploader_backend/: __init__.py  __main__.py  _config.py  wsgi.py
app/frontend/: index.html
app/frontend/static/: script.js  style.css
hosting/: Dockerfile  Makefile  docker-compose.yml  host_nginx_template
hosting/config/: wsgi.ini
