[tool.poetry]
name = "image-uploader-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.2"
python-decouple = "^3.8"

# [project.optional-dependencies]
# server = [
#     "uwsgi (>=2.0.31,<3.0.0)",
# ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
